--- a/src/docs/index.mustache
+++ b/src/docs/index.mustache
@@ -34,7 +34,7 @@
             <div class="title">Generated from tests</div>
             <div class="items">
                 {{#specs}}
-                    <div class="item"><a href="{{.}}.html">{{.}}</a></div>
+                    <div class="item"><a href="{{fileName}}.html">{{label}}</a></div>
                 {{/specs}}
             </div>
         </div>
