--- a/src/spec-examples-generator/spec.ts.mustache
+++ b/src/spec-examples-generator/spec.ts.mustache
@@ -1,4 +1,4 @@
 import('../../spec-examples-generator/spec-jit-proxy').then((proxy) => {
   proxy.runTest('{{{description}}}', '{{{expectation}}}');
-  import('../../../../scroll-rise/src/lib/specs/{{{spec}}}');
+  import('../../../../scroll-rise/src/specs/{{{spec}}}');
 });
