--- a/src/spec-examples-generator/spec.ts.mustache
+++ b/src/spec-examples-generator/spec.ts.mustache
@@ -1,4 +1,6 @@
+declare var LIB_PATH: string | undefined;
+
 import('../../spec-examples-generator/spec-jit-proxy').then((proxy) => {
   proxy.runTest('{{{description}}}', '{{{expectation}}}');
-  import('../../../../scroll-rise/src/specs/{{{spec}}}');
+  import(`${LIB_PATH}/../../../scroll-rise/src/specs/{{{spec}}}`);
 });
