fas with offset demo

--- a/src/docs/index.mustache
+++ b/src/docs/index.mustache
@@ -24,6 +24,9 @@
         <a href="fixed-actors-scene-demo.html" class="demo fixed-actors-scene">
             Fixed Actors Scene
         </a>
+        <a href="fas-offset-demo.html" class="demo fixed-actors-scene">
+            Fixed Actors Scene with offset
+        </a>
         <a href="sps-simple-demo.html" class="demo sticky-platform-scene">
             Sticky Platform Scene Simple
         </a>
