--- a/src/docs/index.mustache
+++ b/src/docs/index.mustache
@@ -21,17 +21,17 @@
         <a href="earth-demo.html" class="demo earth">
             Earth
         </a>
-        <a href="fixed-actors-scene-demo.html" class="demo fixed-actors-scene">
-            Fixed Actors Scene
+        <a href="sps-demo.html" class="demo sticky-platform-scene">
+            Sticky Platform Scene Example
+        </a>
+        <a href="sps-offset-demo.html" class="demo sticky-platform-scene">
+            Sticky Platform Scene with offset
+        </a>
+        <a href="fas-demo.html" class="demo fixed-actors-scene">
+            Fixed Actors Scene Example
         </a>
         <a href="fas-offset-demo.html" class="demo fixed-actors-scene">
             Fixed Actors Scene with offset
-        </a>
-        <a href="sps-simple-demo.html" class="demo sticky-platform-scene">
-            Sticky Platform Scene Simple
-        </a>
-        <a href="sticky-platform-scene-demo.html" class="demo sticky-platform-scene">
-            Sticky Platform Scene
         </a>
         <div class="from-tests-link">
             <div class="title">Generated from tests</div>
